<resources>
    <string name="app_name">LanguageAssistant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_recording">Play recording:</string>
    <string name="score_label">Score:</string>
    <string name="no_add_comments">No additional comments.</string>
    <string name="add_comments">Additional comments:</string>
    <string name="confirm_question">Are you sure you want to give a score of 0 to this response?</string>
    <string name="confirm">Confirm</string>
    <string name="save_again">Something went wrong. Please try to save again. </string>
    <string name="save_error">Error while saving photo. Please take again. </string>
    <string name="pic_error">Error while taking photo. Please try again. </string>
    <string name="feedback_saved">Your feedback has been saved successfully.</string>
    <string name="comments_long">Could not submit - your comments are too long.</string>
    <string name="respond_title">You have already responded to this prompt.</string>
    <string name="respond_msg">You can check the graded section to see your previous responses.</string>
    <string name="ok">ok</string>
    <string name="username">Username:</string>
    <string name="username1">Username</string>
    <string name="password">Password</string>
    <string name="native_lang">Native Language (for grading):</string>
    <string name="target_lang">Target Language:</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="answer_long">Could not submit - your answer is too long.</string>
    <string name="no_response">Could not submit - you did not respond yet.</string>
    <string name="start_recording">Press to start recording.</string>
    <string name="stop_recording">Press to stop recording.</string>
    <string name="no_mic">This device has no mic, so you will not be able to record answers.</string>
    <string name="press_play">Press to play.</string>
    <string name="playing">playing</string>
    <string name="no_recording">You did not record anything yet.</string>
    <string name="response_submitted">Response submitted!</string>
    <string name="welcome">Welcome to the \nLanguage Assistant!</string>
    <string name="explain">The Language Assistant lets users practice writing and speaking skills in a language of their choice, and receive feedback from peers.</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Click here.</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="none_to_grade">You have no responses you need to grade right now.</string>
    <string name="none_graded">You have no responses currently. \nGo to the home page to respond to a prompt. </string>
    <string name="logout">Log out </string>
    <string name="rec_buddy">Recommended Conversation Buddy</string>
    <string name="link">Link</string>
    <string name="fb_instruc">Link your Facebook account for a better conversation buddy \nrecommendation. We will use your location and birthday.</string>
    <string name="submit">Submit</string>
    <string name="write_response">Write your response here:</string>
    <string name="record_response">Record your response:</string>
    <string name="feedback">Please give your feedback on this response.</string>
    <string name="any_add_comments">Any additional comments?</string>
    <string name="not_graded">Not graded yet.</string>
    <string name="edit_lang">Edit Target Language</string>
    <string name="edit_loc">Edit Current Location</string>
    <string name="bday_na">Birthday: N/A</string>
    <string name="bday">Birthday:</string>
    <string name="loc_na">Location: N/A</string>
    <string name="loc">Location:</string>
    <string name="edit_loc_error">Please fill out both fields or leave both blank to delete your location.</string>
    <string name="try_again">Something went wrong. Please try again.</string>
    <string name="error_login">Login unsuccessful. Please check your username and password.</string>
    <string name="fill_all">Please fill in all fields.</string>
    <string name="valid_email">Please enter a valid email (example@example.com).</string>
    <string name="username_repeat">This username is already in use. Please choose another one.</string>
    <string name="new_acc_error">Something went wrong. Please check your info and try again.</string>
    <string name="facebook_app_id">291329435621536</string>
    <string name="fb_login_protocol_scheme">fb291329435621536</string>
</resources>