<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    tools:context=".fragments.RespondFragment"
    android:fillViewport="false"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlPlay"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            android:visibility="gone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvPromptContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:transitionName="prompt"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tvPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    tools:text="Prompt will go here." />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWriteHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="1000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="top"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="6" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvWriteHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llRespond"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:text="@string/write_response"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilResponse"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/submit" />

        <RelativeLayout
            android:id="@+id/rlRecording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSubmit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/tvLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRecord"
                android:layout_marginTop="8dp"
                android:text="Time limit: one minute" />

            <TextView
                android:id="@+id/tvRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="0dp"
                android:text="@string/record_response"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <ImageView
                android:id="@+id/ivStart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/tvRecord"
                android:src="@drawable/ic_baseline_fiber_manual_record_24"
                android:tag="record_button" />

            <TextView
                android:id="@+id/tvRecordInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/ivStart"
                android:text="@string/start_recording" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlRecording"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_centerVertical="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/play_recording"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <ImageView
                android:id="@+id/ivPlay"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/tvPlay"
                android:src="@drawable/ic_baseline_play_circle_outline_24"
                android:tag="play_button" />

            <TextView
                android:id="@+id/tvPlayInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/ivPlay"
                android:text="@string/press_play" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llRespond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mcvPromptContainer"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="Write" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRespond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Record" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
